test/fail/privatefields.java

class Test {
    
    void x() {
        int x = PrivateFields.x;
    }
}

class PrivateFields {
    static int x;
}
